syntax = "proto3";

package io.restorecommerce.country;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";

/*
* Microservice definition.
*/
service Service {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (CountryListResponse);
  rpc Create (CountryList) returns (CountryListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (CountryList) returns (CountryListResponse);
  rpc Upsert (CountryList) returns (CountryListResponse);
}

message Deleted {
  string id = 1;
}

message CountryList {
  repeated Country items = 1;
  uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message CountryListResponse {
  repeated CountryResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message CountryResponse {
  Country payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message Country {
  string id = 1;
  io.restorecommerce.meta.Meta meta = 2;
  string name = 3;
  string country_code = 4;
  string geographical_name = 5;
  repeated string economic_areas = 6; 
}
